--- a/Session2/Implementation/app/src/main/res/layout/activity_login.xml
+++ b/Session2/Implementation/app/src/main/res/layout/activity_login.xml
@@ -25,7 +25,7 @@
             android:layout_gravity="center_horizontal">
 
             <Button
-                android:id="@+id/choose_username"
+                android:id="@+id/chooseUsername"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:layout_alignParentRight="true"
@@ -36,8 +36,8 @@
                 android:id="@+id/username"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
-                android:layout_toLeftOf="@id/choose_username"
-                android:layout_toStartOf="@id/choose_username"
+                android:layout_toLeftOf="@id/chooseUsername"
+                android:layout_toStartOf="@id/chooseUsername"
                 android:inputType="textPersonName"
                 android:hint="@string/username"/>
 
