--- a/Session4/Implementation/app/src/main/res/layout/activity_main.xml
+++ b/Session4/Implementation/app/src/main/res/layout/activity_main.xml
@@ -10,8 +10,9 @@
     android:paddingBottom="@dimen/activity_vertical_margin"
     tools:context=".MainActivity">
 
-    <TextView
-        android:text="Hello World!"
+    <org.lunchtalk.compoundview.CounterView
         android:layout_width="wrap_content"
-        android:layout_height="wrap_content"/>
+        android:layout_height="wrap_content"
+        android:layout_centerInParent="true" />
+
 </RelativeLayout>
