Do some aesthetic improvements

--- a/Session4/Implementation/app/src/main/res/layout/counter_view.xml
+++ b/Session4/Implementation/app/src/main/res/layout/counter_view.xml
@@ -6,6 +6,7 @@
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_gravity="center_vertical"
+        android:textSize="20sp"
         android:text="-"/>
 
     <TextView
@@ -14,6 +15,7 @@
         android:layout_height="wrap_content"
         android:layout_gravity="center_vertical"
         android:layout_margin="20dp"
+        android:textSize="20sp"
         android:text="0"/>
 
     <Button
@@ -21,6 +23,7 @@
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_gravity="center_vertical"
+        android:textSize="20sp"
         android:text="+"/>
 
 </merge>
